--- a/alexandria/activity-elements-activity/src/widgets/alexandria-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-catalog.html
@@ -47,6 +47,9 @@
     </template>
 
     <style>
+        :host {
+            position: relative;
+        }
         :host > h3 {
             margin: 0 0 0 22px;
         }
