--- a/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-time-catalog.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-temporal-time-catalog.html
@@ -44,6 +44,9 @@
     </template>
 
     <style>
+        :host {
+            position: relative;
+        }
         :host > div {
             width: 100%;
             height: 100%;
