clear target when filter is cleared

--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-map.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-map.html
@@ -23,7 +23,7 @@
                                     on-execute="_executeOperation"
                                     on-download="_downloadOperation"></alexandria-catalog-toolbar>
 
-        <google-map-markerclusterer map="{{map}}"></google-map-markerclusterer>
+        <google-map-markerclusterer minimum-cluster-size="4" map="{{map}}"></google-map-markerclusterer>
 
         <template is="dom-repeat" items="{{_itemList}}">
             <alexandria-catalog-map-item name$="[[item.name]]"
