Alexandria: added support for multiple instances of same view in different panels or catalogs

--- a/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -354,6 +354,8 @@
                 var oldItem = this._getComponentItem(this.$.items, item.name);
                 var index = this._getComponentItemIndex(this.$.items, item.name);
 
+                item.group = oldItem.group;
+
                 this.set("itemList." + index, item);
                 this.set("_itemList." + index, item);
                 for (var i=0;i<this.selectedItemList.length;i++)
