--- a/alexandria/activity-elements-activity/src/widgets/alexandria-menu-layout.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-menu-layout.html
@@ -51,7 +51,7 @@
                 <iron-pages id="pages" class="flex" attr-for-selected="name">
                     <template is="dom-repeat" items="[[_itemList]]" as="item">
                         <div class="item" name$="[[item.label]]">
-                            <cotton-zombie display$="[[item.type]]" widget$="[[item.type]]" object$="[[item.label]]"></cotton-zombie>
+                            <cotton-zombie display$="[[item.type]]" widget$="[[item.type]]" object$="[[display.id]][[item.label]]"></cotton-zombie>
                         </div>
                     </template>
                 </iron-pages>
