--- a/alexandria/activity-elements-activity/src/widgets/alexandria-panel.html
+++ b/alexandria/activity-elements-activity/src/widgets/alexandria-panel.html
@@ -34,13 +34,13 @@
                 <template is="dom-repeat" items="[[_viewList]]" as="view">
                     <template is="dom-if" if="[[_isLeftFixedLayoutView(view)]]">
                         <template is="dom-if" if="[[_isCustomView(view)]]">
-                            <cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            <cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[display.id]][[view.name]]"></cotton-zombie>
                         </template>
                         <template is="dom-if" if="[[_isCatalogView(view)]]">
-                            <cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            <cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[display.id]][[view.name]]"></cotton-zombie>
                         </template>
                         <template is="dom-if" if="[[_isDisplayView(view)]]">
-                            <cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            <cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[display.id]][[view.name]]"></cotton-zombie>
                         </template>
                     </template>
                 </template>
@@ -49,13 +49,13 @@
                 <template is="dom-repeat" items="[[_viewList]]" as="view">
                     <template is="dom-if" if="[[_isTabLayoutView(view)]]">
                         <template is="dom-if" if="[[_isCustomView(view)]]">
-                            <div name$="[[view.name]]"><cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[_target]][[view.name]]"></cotton-zombie></div>
+                            <div name$="[[view.name]]"><cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[display.id]][[view.name]]"></cotton-zombie></div>
                         </template>
                         <template is="dom-if" if="[[_isCatalogView(view)]]">
-                            <div name$="[[view.name]]"><cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[_target]][[view.name]]"></cotton-zombie></div>
+                            <div name$="[[view.name]]"><cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[display.id]][[view.name]]"></cotton-zombie></div>
                         </template>
                         <template is="dom-if" if="[[_isDisplayView(view)]]">
-                            <div name$="[[view.name]]"><cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[_target]][[view.name]]"></cotton-zombie></div>
+                            <div name$="[[view.name]]"><cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[display.id]][[view.name]]"></cotton-zombie></div>
                         </template>
                     </template>
                 </template>
@@ -64,13 +64,13 @@
                 <template is="dom-repeat" items="[[_viewList]]" as="view">
                     <template is="dom-if" if="[[_isRightFixedLayoutView(view)]]">
                         <template is="dom-if" if="[[_isCustomView(view)]]">
-                            <cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            <cotton-zombie display="AlexandriaPanelCustomView" widget="AlexandriaPanelCustomView" object$="[[display.id]][[view.name]]"></cotton-zombie>
                         </template>
                         <template is="dom-if" if="[[_isCatalogView(view)]]">
-                            <cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            <cotton-zombie display="AlexandriaPanelCatalogView" widget="AlexandriaPanelCatalogView" object$="[[display.id]][[view.name]]"></cotton-zombie>
                         </template>
                         <template is="dom-if" if="[[_isDisplayView(view)]]">
-                            <cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[_target]][[view.name]]"></cotton-zombie>
+                            <cotton-zombie display="AlexandriaPanelDisplayView" widget="AlexandriaPanelDisplayView" object$="[[display.id]][[view.name]]"></cotton-zombie>
                         </template>
                     </template>
                 </template>
@@ -198,7 +198,6 @@
                 AlexandriaPanelBehaviors.NotifierListener ],
 
             properties : {
-                _target: { type: String, value: function() { return ""; }},
                 _viewList : Array,
                 _showTabs : Boolean,
                 _selectedView : { type: String, value: function() { return null; }, observer: '_selectView' },
@@ -210,10 +209,6 @@
             attached : function() {
                 this.translate(AlexandriaPanelDictionary);
                 this.listenToDisplay();
-            },
-
-            _refreshTarget : function(target) {
-                this._target = target;
             },
 
             _refreshViewList : function(viewList) {
