Added session instead of user

--- a/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
+++ b/alexandria/activity-elements-activity/src/widgets/_common/mold/alexandria-mold-block.html
@@ -336,6 +336,7 @@
                         this.style.display = "block";
                 }
                 if (this.block.hidden) this.style.display = "none";
+                else this.style.display = "";
             },
 
             _createZombieLayers : function () {
